--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <h1>Coming Soon...</h1>
             <p>Future of Cashback.</p>
 
-            <a href="https://t.me/Backify" target="_blank"><img src="img/telegram.svg"></a>
+            <a href="https://t.me/Backify" target="_blank" class="telegram"><img src="img/tg.svg"><span>JOIN US ON TELEGRAM</span></a>
         </div>
             <a href="#" class="invest"><img src="img/bolt.svg"><span>BECOME A SHAREHOLDER WITH JUST €10</span></a>
 
