--- a/twitter.html
+++ b/twitter.html
@@ -22,6 +22,16 @@
         Current Twitter name: <a href="https://twitter.com/Backify3" target="_blank">https://twitter.com/Backify3</a>
         <br>
         New Twitter name: <a https: href="https://twitter.com/backify" target="_blank">https://twitter.com/backify</a>
+<br>
+<br>
+        Cody Bradley
+        <br>
+        cody@backify.com
+        <br>
+        <br>
+        Trademark
+        <br>
+        <a href="https://euipo.europa.eu/eSearch/#details/trademarks/018312417" target="_blank">https://euipo.europa.eu/eSearch/#details/trademarks/018312417</a>
     </div>
 </body>
 
