--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <nav>
             <ul>
                 <li><a href="#">WHAT IS BACKIFY?</a></li>
-                <li class="learn"><a href="#">LEARN MORE</a></li>
+                <li class="learn"><a href="https://go.coinmetro.com/security-token-platform/backify">INVEST NOW</a></li>
             </ul>
         </nav>
 
@@ -47,7 +47,7 @@
 
             <a href="https://t.me/Backify" target="_blank" class="telegram"><img src="img/tg.svg"><span>JOIN US ON TELEGRAM</span></a>
         </div>
-            <a href="#" class="invest"><img src="img/bolt.svg"><span>BECOME A SHAREHOLDER WITH JUST €10</span></a>
+            <a href="https://go.coinmetro.com/security-token-platform/backify" class="invest"><img src="img/bolt.svg"><span>BECOME A SHAREHOLDER WITH JUST €10</span></a>
 
 
 
