--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
 
   gtag('config', 'G-JYBZWZV5ZN');
 </script>
+    
+    <!-- Start of backify Zendesk Widget script -->
+<script id="ze-snippet" src="https://static.zdassets.com/ekr/snippet.js?key=104859c9-a785-4774-902e-11393d1f4fff"> </script>
+<!-- End of backify Zendesk Widget script -->
 </head>
 
 <body>
